Only set fixed and important z-index for autocomplete dropdowns
Might need to adjust for other use cases though. This should fix the mess with the overlays on links or any ui facing pop up

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,9 @@ body {
 
 .ui-front {
   //@ see .affix
-  z-index: 2001 !important;
+  &.ui-autocomplete {
+    z-index: 2001 !important;
+  }
 }
 
 /* animate underline except for navbar-brand */
